# Scatters

./: .gitignore  Cargo.toml  LICENSE  README.md  WARP.md  build.ps1  generate codebase.ps1  generate_documentation.ps1  lint.ps1  publish.ps1  update deps.ps1
sample/: sample.csv
src/: cli.rs  data_loader.rs  error.rs  lib.rs  main.rs  plotter.rs  processing.rs
templates/: page.html  page.jinja2
