[package]
name = "scatters"
version = "0.0.2"
edition = "2021"

authors = ["Tesserato <tesserato@hotmail.com>"]

description = "A CLI to instantly turn tabular data and audio files into interactive HTML scatter plots."

license = "MIT"

readme = "README.md"

keywords = ["plot", "chart", "visualization", "cli", "data"]

categories = ["command-line-utilities", "visualization"]

[dependencies]
# Core data processing
polars = { version = "0.51.0", features = [
    "lazy",
    "csv",
    "parquet",
    "json",
    "dtype-datetime",
    "dtype-date",
] }

# Excel file processing
calamine = "0.30"

# Audio file processing
symphonia = { version = "0.5.4", features = ["all-formats", "all-codecs"] }

# CLI argument parsing
clap = { version = "4.5.47", features = ["derive"] }

# Filesystem traversal
walkdir = "2.5.0"

# Error handling
anyhow = "1.0.99"
thiserror = "2.0.16"

# Datetime parsing
chrono = { version = "0.4", default-features = false, features = ["alloc"] }

# Type-safe HTML generation
askama = "0.14.0"

# JSON serialization for embedding data in HTML/JS
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"

# Data downsampling
lttb = "0.2.0"